update Dist::Zilla plugins to avoid need for Substitute
Update [Test::CPAN::Changes] and [Test::Perl::Critic] plugins to
versions we can set options on them, rather than needing to modify them
afterward.

--- a/dist.ini
+++ b/dist.ini
@@ -54,10 +54,8 @@ mode = on
 [MojibakeTests]
 [PodSyntaxTests]
 [Test::CPAN::Changes]
-[Substitute / RenameTestCPANChanges]
--version = 0.008
-file = xt/release/cpan-changes.t
-filename_code = s{release}{author};
+:version = 0.013
+filename = xt/author/cpan-changes.t
 [Test::ChangesHasContent]
 [Test::Compile]
 [Test::EOL]
@@ -66,10 +64,9 @@ filename = xt/author/kwalitee.t
 [Test::MinimumVersion]
 [Test::NoTabs]
 [Test::Perl::Critic]
-critic_config = .perlcriticrc
-[Substitute / VerboseCritic]
-file = xt/author/critic.t
-code = s/ x!!.*;/;/; s/(-profile)/-verbose => 8, $1/;
+:version = 3.002
+profile = .perlcriticrc
+verbose = 8
 [Test::Pod::Coverage::TrustMe]
 [Test::PodSpelling]
 [Test::Portability]
